Termine diseño vista publica, aun falta pulir los PopUps del Map

--- a/frontend/src/components/css/Map.css
+++ b/frontend/src/components/css/Map.css
@@ -1,3 +1,4 @@
+/* src/components/css/Map.css */
 .map-container {
   height: 500px; /* Ajusta la altura según tus necesidades */
   width: 100%;
@@ -15,6 +16,7 @@
   font-size: 28px;
   transform: translate(-50%, -50%);
 }
+
 .icon-background {
   display: flex;
   align-items: center;
@@ -27,6 +29,7 @@
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5); /* Sombra para dar profundidad */
   font-size: 24px; /* Tamaño del emoji */
 }
+
 .custom-icon::after {
   content: '';
   position: absolute;
@@ -35,9 +38,49 @@
   transform: translateX(-50%);
   width: 0;
   height: 0;
-  box-shadow: 0 0 5px rgba(0, 17, 255, 0); /* Sombra para dar profundidad */
+  box-shadow: 0 0 10px rgba(0, 17, 255, 0); /* Sombra para dar profundidad */
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
   border-top: 10px solid red; /* Debe ser del mismo color que el fondo */
+}
+
+/* Estilos para los popups */
+.mp-popup-content {
+  padding: 0.5px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+}
+
+.mp-popup-section {
+  display: flex;
   
+  align-items: center;
+  margin-bottom: 10px;
+  padding: 3px;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+}
+
+.mp-popup-title {
+  font-size: 16px;
+  font-weight: bold;
+  color: #333333;
+  margin-right: 1px;
+}
+
+.mp-popup-text {
+  font-size: 14px;
+  color: #555555;
+  flex-grow: 1;
+  text-align: right;
+}
+
+/* Separador */
+.mp-popup-divider {
+  border-bottom: 0.5px solid #ddd;
+  margin: 5px 0;
 }
