--- a/frontend/src/components/css/AgenteVirtual.css
+++ b/frontend/src/components/css/AgenteVirtual.css
@@ -1,8 +1,10 @@
 .agente-virtual {
+    position: absolute;
     width: 100%;
+    bottom: 0%;
     max-width: 400px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 2%;
     border: 1px solid #ccc;
     border-radius: 8px;
   }
