Ya funciona el chat con ia, y configure para que sea una conversación con la api y no un preguntas y rspuestas

--- a/frontend/src/components/css/CrearEditarEstablecimiento.css
+++ b/frontend/src/components/css/CrearEditarEstablecimiento.css
@@ -64,6 +64,7 @@
     padding: 10px 20px;
     border-radius: 4px;
     cursor: pointer;
+    margin-left: 25px;
   }
   
   .ce-crearEditarEstablecimiento .ce-button-secondary:hover {
