--- a/frontend/src/components/css/CambiarContra.css
+++ b/frontend/src/components/css/CambiarContra.css
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
   }
-  
+/*aaaaacgu*/
   .cc-cambiarContra {
     background-color: white;
     padding: 20px;
